# fv3d

./: .gitignore  .gitmodules  BoundaryConditions.h  CMakeLists.txt  CMakePresets.json  ComputeDt.h  Heating.h  IOManager.h  Init.h  README.md  RiemannSolvers.h  SimInfo.h  States.h  ThermalConduction.h  Update.h  Viscosity.h  main.cpp
settings/: C91.ini  C91.ini~  bi-layer-small.ini  bi-layer.ini  blast.ini  blast.ini~  sod_x.ini
